# msr-downloader

./: .gitignore  Cargo.toml  README.md
src/: client.rs  download.rs  error.rs  lib.rs  main.rs  metadata.rs  models.rs  progress.rs  utils.rs
