[package]
name = "msr-downloader"
version = "0.1.0"
edition = "2024"
description = "Download music tracks and albums from Monster Siren Records"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.0"
lofty = "0.22.4"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
